--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,8 @@ allprojects {
     }
 
     dependencies {
-        compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.1'
-        compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.1'
+//        compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.1'
+//        compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.1'
 
     }
 }
