--- a/dw-logger/build.gradle
+++ b/dw-logger/build.gradle
@@ -18,7 +18,8 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.2'
 
     compileOnly 'org.projectlombok:lombok:1.18.2'
-
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.1'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.1'
 
 }
 
