--- a/dw-mocker/build.gradle
+++ b/dw-mocker/build.gradle
@@ -1,3 +1,5 @@
 dependencies {
     compile project(path: ":dw-common")
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.1'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.1'
 }
