--- a/dw-publisher/build.gradle
+++ b/dw-publisher/build.gradle
@@ -9,36 +9,34 @@ configurations {
 }
 
 dependencies {
+
+    implementation('org.springframework.boot:spring-boot-starter-web')
+            {
+                exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+            }
     compile project(path: ":dw-common")
+//    compile group: 'org.springframework.boot', name: 'spring-boot-starter-log4j2'
 
-
-
-    implementation('org.springframework.boot:spring-boot-starter-web') {
+    implementation('org.springframework.boot:spring-boot-starter-jdbc')
+            {
+                exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+            }
+    implementation('org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.1') {
         exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
     }
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-log4j2'
 
-    implementation ('org.springframework.boot:spring-boot-starter-jdbc'){
-        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
-    }
-    implementation ('org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.1')
-    {
-        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
-    }
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
-    // https://mvnrepository.com/artifact/org.apache.phoenix/phoenix-core
-    compile (group: 'org.apache.phoenix', name: 'phoenix-core', version: '4.14.2-HBase-1.3'){
-        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
-    }
 
 
-
-// https://mvnrepository.com/artifact/com.google.guava/guava
     compile group: 'com.google.guava', name: 'guava', version: '20.0'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
+    compile(group: 'org.apache.phoenix', name: 'phoenix-core', version: '4.14.2-HBase-1.3') {
+        exclude group: 'javax.servlet', module: 'servlet-api'
+    }
+
 }
 
 test {
