--- a/dw-realtime/build.gradle
+++ b/dw-realtime/build.gradle
@@ -36,6 +36,9 @@ dependencies {
     compile group: 'org.apache.phoenix', name: 'phoenix-spark', version: '4.14.2-HBase-1.3'
     compile group: 'org.apache.spark', name: 'spark-sql_2.11', version: '2.1.1'
 
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.1'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.1'
+
     compile "org.scala-lang:scala-library:2.11.7"
     compile "org.scala-lang:scala-compiler:2.11.7"
     compile "org.scala-lang:scala-reflect:2.11.7"
